# rust-inla

./: .Rbuildignore  .Rhistory  .gitignore  API_IMPLEMENTATION_QUEUE.md  AR2_EXTENSION_EXAMPLE.md  CONTEXT_SESION.md  CONTEXT_SESION_v3.md  COVERAGE_EVALUATION_2026-04-19.md  Cargo.toml  DESCRIPTION  EXTENSION_BACKLOG.md  EXTENSION_INTERVENTION_MAP.md  EXTERNAL_EXAMPLE_BENCHMARKING_GUIDE.md  FIXED_EFFECTS_FORMULA_SUBSET.md  IMPLEMENTATION_CHECKPOINT_MERGE_NOTES_2026-04-19.md  IMPLEMENTATION_INVENTORY_AND_EXTENSION_GUIDE.md  NAMESPACE  PLAN_6_TO_9_MONTHS.md  POSTERIOR_STATE_UPDATE_RFC.md  PROVENANCE.md  README.md  RINLA_API_SURFACE_INVENTORY.md  RINLA_PARITY_GAP_INVENTORY.md  ROADMAP_V0_1.md  SUPPORTED_SUBSET_VALIDATION_MANIFEST.md  THIRD_PARTY.md  benchmark.R  cholesky_rw1.json  fix.py  fix_a3.py  iid_gaussian.json  last_failed_matrix.txt  rw1_poisson.json  setup.py
.devcontainer/: devcontainer.json
R/: extendr-wrappers.R  f.R  interface.R
benches/: cholesky_bench.rs
man/: f.Rd  predict.rusty_inla.Rd  rust_inla_run.Rd  rusty_inla.Rd
scratch/: BENCHMARK_OUTPUT_PROFILE_COMPARISON_2026-04-18.md  BENCHMARK_SUMMARY_2026-04-18.md  BENCHMARK_SUMMARY_2026-04-19.md  EXTERNAL_EXAMPLES_FOR_ACTIVE_BENCHMARK_MODELS_2026-04-18.md  EXTERNAL_REFERENCE_OUTPUT_PROFILE_COMPARISON_2026-04-19.md  PRIORITY1_2_FINDINGS_2026-04-15.md  PRIORITY1_COUNT_CASES_2026-04-15.md  PRIORITY1_TERMWISE_COUNT_COMPARISON_2026-04-15.md  RINLA_OUTPUT_APPLES_TO_APPLES_AUDIT_2026-04-18.md  benchmark_external_reference_cases.R  benchmark_plots.R  compare_inla_E_vs_offset.R  compare_inla_count_cases_E_vs_offset.R  compare_poisson_multi_iid_mode_precision.R  compare_rust_vs_inla_count_config_logpost_surface.R  compare_rust_vs_inla_count_laplace_at_inla_theta.R  compare_rust_vs_inla_count_uncertainty_terms.R  compare_rust_vs_inla_termwise_count_models.R  compare_rust_vs_inla_zip_iid_laplace_terms.R  compare_rust_vs_inla_zip_iid_mode_inputs.R  compare_rust_vs_inla_zip_iid_modes.R  debug_zip_iid_config_replays.R  diagnose_gamma_rw1_vs_iid_uncertainty.R  diagnose_intercept.R  profile_poisson_iid_theta.R  test_faer.rs  test_iid_pois.R
src/: Makevars.in  Makevars.win.in  entrypoint.c  lib.rs  rustyINLA-win.def
src/rust/: Cargo.toml  compile_error.txt  inject_kkt.py  restructure.py
src/rust/inla_core/: Cargo.toml
src/rust/inla_core/src/: error.rs  lib.rs
src/rust/inla_core/src/density/: mod.rs
src/rust/inla_core/src/diagnostics/: mod.rs
src/rust/inla_core/src/graph/: mod.rs
src/rust/inla_core/src/inference/: mod.rs
src/rust/inla_core/src/integrator/: mod.rs
src/rust/inla_core/src/likelihood/: mod.rs
src/rust/inla_core/src/marginal/: mod.rs
src/rust/inla_core/src/models/: mod.rs
src/rust/inla_core/src/optimizer/: ccd.rs  mod.rs
src/rust/inla_core/src/problem/: mod.rs
src/rust/inla_core/src/solver/: faer_solver.rs
src/rust/inla_core/tests/: test_basic.rs
src/rust/src/: bindings.rs  error.rs  lib.rs
src/rust/src/inference/: mod.rs
src/rust/src/likelihood/: mod.rs
src/rust/src/marginal/: mod.rs
src/rust/src/optimizer/: ccd.rs  mod.rs
src/rust/src/problem/: mod.rs
src/rust/src/solver/: mod.rs
src/rust/tests/: try_faer.rs
tests/: fixed-effects-interface.R  fixed-effects-public-api-errors.R  fixed-only-parity.R
tools/: check-rust-workspace-win.ps1  config.R  load_worktree_package.R  run-phase7a-validation.ps1  run_supported_subset_validation.R  (+1 more)
(+23 files in other folders)
