[package]
name = 'rustyINLA'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib' ]
name = 'rustyINLA'

[dependencies]
extendr-api = '0.8.1'
faer = "0.24.0"
rayon = "1.10"
argmin = "0.10"
argmin-math = "0.4"
statrs = "0.18"
sha2 = "0.10"
rand = "0.8"
thiserror = "2.0"
ndarray = { version = "0.16", features = ["approx"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
