[package]
name = 'rustyINLA'
publish = false
version = '0.2.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib', 'rlib' ]
name = 'rustyINLA'

[workspace]
members = [ ".", "inla_core" ]

[dependencies]
extendr-api = { git = "https://github.com/extendr/extendr" }
inla_core = { path = "inla_core" }
rayon = "1.10"
rustc-hash = "2.0"
